Display full booking request details
Displays the full booking request details in a readonly form.

--- a/app/views/booking_requests/index.html.erb
+++ b/app/views/booking_requests/index.html.erb
@@ -2,10 +2,10 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><%= link_to 'Welsh appointment planner', root_path %></li>
-    <li class="active">Booking Requests</li>
+    <li class="active">Booking requests</li>
   </ol>
 
-  <h1>Booking Requests</h1>
+  <h1>Booking requests</h1>
 </div>
 
 <div class="row">
