--- a/app/views/booking_requests/index.html.erb
+++ b/app/views/booking_requests/index.html.erb
@@ -23,6 +23,7 @@
             <th>Requested</th>
             <th>Customer name</th>
             <th>Appointment type</th>
+            <th>Location</th>
             <th>Processed</th>
             <th></th>
           </tr>
@@ -42,6 +43,9 @@
               </td>
               <td class="t-booking-type">
                 <%= booking_request.booking_type %>
+              </td>
+              <td class="t-location">
+                <%= booking_request.location_name %>
               </td>
               <td class="t-processed">
                 <%= booking_request.processed %>
