--- a/app/views/guider_mailer/booking_request.html.erb
+++ b/app/views/guider_mailer/booking_request.html.erb
@@ -1,3 +1,3 @@
-<p>A new Welsh language booking request has come in.</p>
+<p>A new <%= @booking_request.booking_type %> booking request has come in.</p>
 
 <p><%= link_to 'Go to the planner', @booking_request %></p>
