--- a/app/views/bsl_booking_requests/show.html.erb
+++ b/app/views/bsl_booking_requests/show.html.erb
@@ -115,6 +115,26 @@
               Don’t know
             <% end %>
           </div>
+
+          <% if @booking_request.supported? %>
+          <h2 class="h3">Supported by</h2>
+          <div class="form-group">
+            <%= f.label :support_name, 'Name' %>
+            <%= f.text_field :support_name, class: 'form-control t-support-name', readonly: true %>
+          </div>
+          <div class="form-group">
+            <%= f.label :support_relationship, 'Relationship' %>
+            <%= f.text_field :support_relationship, class: 'form-control t-support-relationship', readonly: true %>
+          </div>
+          <div class="form-group">
+            <%= f.label :support_email, 'Email' %>
+            <%= f.text_field :support_email, class: 'form-control t-support-email', readonly: true %>
+          </div>
+          <div class="form-group">
+            <%= f.label :support_phone, 'Phone' %>
+            <%= f.text_field :support_phone, class: 'form-control t-support-phone', readonly: true %>
+          </div>
+          <% end %>
         <% end %>
       </div>
     </div>
