Update privacy policy URL

--- a/app/views/customer_mailer/confirmation.html.erb
+++ b/app/views/customer_mailer/confirmation.html.erb
@@ -20,7 +20,7 @@
 
 <p>Bydd eich data yn cael ei rannu gyda'n partneriaid cyflenwi dim ond lle y bo’n angen rhoi cyngor ar Pension Wise i chi.</p>
 
-<p>Gellir dod o hyd i fanylion llawn ein polisi preifatrwydd, gan gynnwys gwybodaeth am eich hawliau mewn perthynas â'r data sydd gennym, yn <a href="https://www.pensionwise.gov.uk/cy/privacy/">https://www.pensionwise.gov.uk/cy/privacy</a>.</p>
+<p>Gellir dod o hyd i fanylion llawn ein polisi preifatrwydd, gan gynnwys gwybodaeth am eich hawliau mewn perthynas â'r data sydd gennym, yn <a href="https://www.moneyhelper.org.uk/cy/about-us/privacy-notice">moneyhelper.org.uk/cy/about-us/privacy-notice</a>.</p>
 
 <h2>Paratoi ar gyfer eich apwyntiad</h2>
 
